--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@ background-color: rgb(0, 0, 0);
 h1{
     color: rgb(255, 0, 0);
 }
+body{
+    background-color: rgb(22, 18, 18);
+}
+h2{
+    color: rgb(255, 255, 255);
+}
+p{
+    color: rgb(255, 255, 255);
+}
