--- a/style.css
+++ b/style.css
@@ -14,3 +14,30 @@ h2{
 p{
     color: rgb(255, 255, 255);
 }
+h3{
+    color: #ffffff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 28px;
+    padding-left: 30px;
+}
+    
+   .carrosel-de-filmes{
+    padding-left: 20px;
+    padding-right:20px ;
+    margin-top: 50px;
+
+   }
+   .filmes{
+    display: flex;
+    gap: 20px;
+   }
+.filmes img{
+    width: 600px;
+    overflow-x: auto;
+}
+.filmes img:hover{
+    border: 3px solid red;
+}
+    
+   
+
